--- a/src/backend/InnerBalance.API/appsettings.Development.json
+++ b/src/backend/InnerBalance.API/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Authentication": {
+    "SecretForKey": "thisisthesecretforgeneratingkey(mustbeatleast32bitlong)",
+    "Issuer": "http://localhost:7213",
+    "Audience": "teacherssideapi"
   }
 }
