partial frontend for yoga classes (get & del)

--- a/src/frontend/inner-balance/package.json
+++ b/src/frontend/inner-balance/package.json
@@ -18,9 +18,23 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@progress/kendo-angular-inputs": "^15.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.0"
+    "zone.js": "~0.13.0",
+    "@progress/kendo-drawing": "^1.19.0",
+    "@progress/kendo-licensing": "^1.0.2",
+    "@progress/kendo-angular-buttons": "15.0.1",
+    "@progress/kendo-angular-common": "15.0.1",
+    "@progress/kendo-angular-dialog": "15.0.1",
+    "@progress/kendo-angular-intl": "15.0.1",
+    "@progress/kendo-angular-l10n": "15.0.1",
+    "@progress/kendo-angular-popup": "15.0.1",
+    "@progress/kendo-angular-icons": "15.0.1",
+    "@progress/kendo-angular-upload": "15.0.1",
+    "@progress/kendo-svg-icons": "^2.0.0",
+    "@angular/localize": "^16.2.0",
+    "@progress/kendo-theme-default": "^7.2.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.6",
